[workspace]
members = [
    "xdp",
]

resolver = "2"

[workspace.package]
authors = ["Alexey Sudachen"]
edition = "2024"
homepage = "https://github.com/sudachen/xdp-rs"
license = "MIT OR Apache-2.0"
# TODO: Update the repository URL to the actual repository of your project
repository = "https://github.com/sudachen/xdp-rs"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
libc = { version = "0.2.105", default-features = false }
tokio = { version = "1.24.0", default-features = false }
log = { version = "0.4", default-features = false }
libbpf-sys = {  version = "1.5", default-features = false }

[workspace.lints.clippy]
unused_trait_names = "warn"

[workspace.lints.rust]
unused-extern-crates = "warn"
