[workspace]
members = [ "xdp-socket", "xdp-tests" ]

resolver = "2"

[workspace.package]
authors = ["Alexey Sudachen"]
edition = "2024"
homepage = "https://github.com/sudachen/xdp-rs"
license = "MIT"
repository = "https://github.com/sudachen/xdp-rs"
rust-version = "1.85.0"
readme = "README.md"

[workspace.dependencies]
libc = { version = "0.2.105", default-features = false }
tokio = { version = "1.24.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
log = { version = "0.4", default-features = false }
libbpf-sys = { version = "1.5", default-features = false }
caps = { version = "0.5.5", default-features = false }
env_logger = { version = "0.11", default-features = false }

[workspace.lints.clippy]
unused_trait_names = "warn"

[workspace.lints.rust]
unused-extern-crates = "warn"

