[workspace]
members = [ "xdp-socket", "xdp-tests" , "xdp-util"]

resolver = "2"

[workspace.package]
authors = ["Alexey Sudachen"]
edition = "2024"
version = "0.1.4"
homepage = "https://github.com/sudachen/xdp-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sudachen/xdp-rs"
rust-version = "1.85.0"
readme = "README.md"

[workspace.dependencies]
libc = { version = "0.2.105" }
tokio = { version = "1.24.0" }
tokio-util = { version = "0.7.10" }
log = { version = "0.4" }
libbpf-sys = { version = "1.5"}
caps = { version = "0.5.5" }
env_logger = { version = "0.11" }
clap = { version = "4.5"}
humantime = {  version = "2.2" }
etherparse = {  version = "0.18" }

[workspace.lints.clippy]
unused_trait_names = "warn"
uninlined_format_args = "allow"

[workspace.lints.rust]
unused-extern-crates = "warn"

