[package]
name = "nettest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
exec = { version = "0.3.1" }
caps = { workspace = true }

[lints]
workspace = true

[lib]
name = "nettest"
path = "src/lib.rs"

[[bin]]
name = "nettest"
path = "src/main.rs"

