[package]
name = "xdp-socket"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
log = { workspace = true }
ipnet = { version = "2.11.0" }
prefix-trie = {  version = "0.8.1" }
libbpf-sys = {  workspace = true }
netlink-sys = { version = "0.8.7" }
netlink-packet-route = {  version = "0.24.0" }
netlink-packet-core = { version = "0.7.0"}
etherparse = {  version = "0.18" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
exec = { version = "0.3.1" }
caps = { workspace = true }

[dev-dependencies]
eui48 = { version = "0.5.1" }
env_logger = { workspace = true }
nettest = { path = "../nettest" }

[[test]]
name = "pingpong"
path = "tests/pingpong.rs"
harness = false

