[package]
name = "xdp-socket"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true

description = "Simple and fast API to use XDP sockets in Rust"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
log = { workspace = true }

[dev-dependencies]

[features]
"no_safety_checks" = []
