[package]
name = "xdp-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme.workspace = true

[dependencies]
eui48 = { version = "0.5.1" }
env_logger = { workspace = true }
include_bytes_aligned = { version = "0.1.4" }
xdp-socket = { path = "../xdp-socket" }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
libbpf-sys = { workspace = true }
exec = { version = "0.3.1" }
caps = { workspace = true }

[lints]
workspace = true


[[test]]
name = "pingpong_test"
path = "src/pingpong_test.rs"
harness = false

[[test]]
name = "try_netlink"
path = "src/try_netlink.rs"

[[bin]]
name = "ponger"
path = "src/ponger.rs"

